--- a/styles/table.css
+++ b/styles/table.css
@@ -61,20 +61,19 @@ td {
   border: solid 1pt;
 }
 
-.row_cell_human {
+.cell_checkbox {
   text-align: center;
   font-size: 12pt;
   width: 6%;
 }
 
-.row_cell_year,
-.row_cell_type {
+.cell_textfield {
   text-align: center;
   font-size: 12pt;
   width: 7%;
 }
 
-.row_cell_name {
+.cell_descriptor {
   text-align: left;
   padding-left: 5px;
   font-size: 12pt;
@@ -106,9 +105,9 @@ td {
     font-size: 8pt;
   }
 
-  .row_cell_year,
-  .row_cell_type,
-  .row_cell_human {
+  .cell_checkbox,
+  .cell_textfield,
+  .cell_descriptor {
     font-size: 6pt;
   }
 }
