Fixed bug where the background color of the collapsible of multiple tables would lock itself. Fixed it by removing the permanent color change to a simpler hover effect only

--- a/styles/collapsible.css
+++ b/styles/collapsible.css
@@ -15,10 +15,9 @@
     justify-content: space-between;
 }
 
-.active, .collapsible:hover:not(:has(*:hover)) {
+.collapsible:hover {
     background-color: var(--color-collapsible-active);
 }
-
 
 /* The switch - the box around the slider */
 .switch {
