--- a/styles/slider.css
+++ b/styles/slider.css
@@ -10,6 +10,10 @@
   transition: 0.4s;
 }
 
+.slider-deactive {
+  filter: brightness(0.7);
+}
+
 .slider:before {
   position: absolute;
   content: "";
